<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/markersNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/marker_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/markersNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/markersNameTitle"
        app:layout_constraintTop_toTopOf="@id/markersNameTitle" />

    <TextView
        android:id="@+id/markersDescriptionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/marker_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/markersNameTitle" />

    <TextView
        android:id="@+id/markersDescriptionTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/markersDescriptionTitle"
        app:layout_constraintTop_toTopOf="@id/markersDescriptionTitle" />

    <TextView
        android:id="@+id/markersLatitudeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/marker_lat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/markersDescriptionTitle" />

    <TextView
        android:id="@+id/markersLatitudeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/markersLatitudeTitle"
        app:layout_constraintTop_toTopOf="@id/markersLatitudeTitle" />
    <TextView
        android:id="@+id/markersLongitudeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/marker_long"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/markersLatitudeTitle" />

    <TextView
        android:id="@+id/markersLongitudeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/markersLongitudeTitle"
        app:layout_constraintTop_toTopOf="@id/markersLongitudeTitle" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/hairline"
        android:layout_marginTop="@dimen/margin_5_dp"
        android:background="@color/purple_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/markersLongitudeTitle" />
</androidx.constraintlayout.widget.ConstraintLayout>